# dragonstack

./: .eslintrc  .gitignore  LICENSE  README.md  justfile  package.json
.husky/: pre-commit
backend/: .dockerignore  Cargo.toml  Dockerfile  databasePool.ts  justfile  package.json
backend/app/: config.js  config.ts  dragon.js  index.js  index.ts
backend/app/account/: helper.ts  session.ts  table.ts
backend/app/accountDragon/: table.ts
backend/app/api/: account.ts  dragon.js  dragon.ts  generation.js  generation.ts  helper.ts
backend/app/dargon/: breeder.ts  helper.ts  index.ts  table.ts
backend/app/dragonTrait/: table.ts
backend/app/generation/: engine.js  engine.ts  index.js  index.ts  table.ts
backend/app/trait/: table.ts
backend/core/: Cargo.toml  build.rs
backend/core/protos/: authsdk.proto
backend/core/src/: common.rs  config.rs  lib.rs  sqlx_postgres.rs
backend/data/: traits.json
backend/protos/: auth.proto
frontend/: Dockerfile  package.json  webpack.config.js  webpack.dev.js  webpack.prod.js
frontend/src/: config.ts  index.css  index.html  index.tsx
frontend/src/actions/: account.ts  accountDragons.ts  accountInfo.ts  dragon.ts  generation.ts  publicDragons.ts  type.ts
frontend/src/assets/: index.ts
node-backend/: databasePool.ts  package.json  tsconfig.json
node-backend/app/: config.ts  index.ts
rust-backend/: Cargo.toml
rust-backend/core/: Cargo.toml
rust-backend/core/migrations/: 20221111162356_dragon.sql
rust-backend/core/src/: breeder.rs  common.rs  lib.rs  sqlx_postgres.rs  traits.toml
(+39 files in other folders)
